# de-LLM

./: .gitignore  LICENSE  README.md  demo_general.py  embedding.py  main.py  pyproject.toml
applications/: agent.py
applications/langclaw/: README.md  pyproject.toml
applications/langclaw/src/langclaw/tools/: builtin.py
applications/simple_mcp/: mcp_example.py
basic/: gpt2.py  gradient.py  loss.py
basic/embedding/: simple_embedding.py
basic/gradient/: backward.py
basic/tokenization/: tokenization.py
basic_ml/: gradient.py
basic_torch/: __init__.py  affine_linear_demo.py  conv_layers_demo.py  data.py  forward_demo.py  linear.ipynb  mask_fill.ipynb  model.py  module_demo.py  parallel.py  simple_word2vec.py  tokenization_example.py  transformers.py  transformers_demo.py  word2vec_demo.py  zero_grad_demo.py
basic_torch/distributed/: basic-pipe.py  dtensor_usage.py  train.py
basic_torch/linear/: linear_unit.ipynb
course/: taiwan-1.py  taiwan-2-context-engineering.py  taiwan-3.py
docs/: activation.md  agent.md  basic.md  course.md  deep_projects.md  distribute_train.md  encoder.md  huggingface.md  knowledge.md  langchain.md  linears.md  local_model.md  stanford_cme295.md  tokenization.md  tools.md  transformer.md  tuning.md
general/: README.md  __init__.py  algorithms.py  async.py  async_example.py  asyncio_example.py  containers.py  env.py  logging_setup_example.py  stdlib_examples.py  with.py
handson_llm/: lesson-1.py
ipynbs/: Llama.ipynb  basic.ipynb  gpt2.ipynb  numpy.ipynb  torch.ipynb  torch_compile.ipynb  torch_data_process.ipynb  torch_evaluate.ipynb  torch_gradient.ipynb  torch_loss.ipynb  torch_simple_model.ipynb  torch_utils.ipynb
ipynbs/basic/: model_info.ipynb  position-embedding.ipynb  softmax-layernorm.ipynb
ipynbs/language/: concurrent_example.ipynb  structure.ipynb
ipynbs/numpy/: basic.ipynb
ipynbs/post-training/: sft.ipynb
ipynbs/tools/: data-server.ipynb  fastapi.ipynb  wandb.ipynb
ipynbs/tools/wandb/: latest-run
ipynbs/tools/wandb/run-20260109_200902-rs1phc58/: run-rs1phc58.wandb
ipynbs/tools/wandb/run-20260109_200902-rs1phc58/files/: config.yaml  wandb-metadata.json  wandb-summary.json
ipynbs/tools/wandb/run-20260109_200944-a11he3q2/: run-a11he3q2.wandb
ipynbs/tools/wandb/run-20260109_200944-a11he3q2/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
ipynbs/tools/wandb/run-20260109_201029-nd0hwx2o/: run-nd0hwx2o.wandb
ipynbs/tools/wandb/run-20260109_201029-nd0hwx2o/files/: config.yaml  wandb-metadata.json  wandb-summary.json
ipynbs/tools/wandb/run-20260109_213633-6fguzebb/: run-6fguzebb.wandb
ipynbs/tools/wandb/run-20260109_213633-6fguzebb/files/: config.yaml  wandb-metadata.json  wandb-summary.json
ipynbs/transformer/: decoder.ipynb  encoder.ipynb
langchain/: agent.ipynb  agent.py  agent_in_graph.py  agent_stream_batch.py  dynamic_model.ipynb  dynamic_node.py  graph-1.py  graph-3-loop.py  langgraph.json  mcp_agent.py  parallel.py  readme.md  simple_agent.py
langchain/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl
langgraph/: graph-1.py  graph-2-conditional.py  graph-state.py  graph_interrupt.py  graph_rag.py  graph_streaming.py  graph_time_travel.py  graph_tools.py  readme.md
practice/distribute/: dpp.py  dtensor.py  pipeline.py  shard.py
practice/helloworld/: dataset.py  readme.md  simple_model.py  simple_model_ddp.py  simple_model_dp.py  simple_model_fsdp2.py  simple_model_tp.py
practice/huggingface/: evaluate.py  readme.md  sft.py  utils.py
practice/openai_interface/: demo.py
practice/tiny-torch/: activation.py  grad.py  layer.py  loss.py  otimizers.py  readme.md  tensor.py
practice/web_agent/: .gitignore  QUICKSTART.md  README.md  __init__.py  agent.py  cli.py  example.py  mcp_tools.py  summarizer.py
projects/: readme.md
scripts/: visualize_conv_net.py
utils/: login_huggingface.py
vibe/: start.sh
